--- a/LSJVideo/Info.plist
+++ b/LSJVideo/Info.plist
@@ -2,10 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDisplayName</key>
-	<string>天天色区</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>天天色区</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -25,9 +25,11 @@
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>alipay</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>comLSJyingyuanappAliPayUrlScheme</string>
+				<string>comtiantianyingyuan2016appAliPayUrlScheme</string>
 			</array>
 		</dict>
 	</array>
